Kubernetes/jmaze-k8s/code-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/name: code-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
      app.kubernetes.io/name: code-server
      app.kubernetes.io/instance: code-server
      pod.name: main
  template:
    metadata:
      labels:
        app: code-server
        app.kubernetes.io/name: code-server
        app.kubernetes.io/instance: code-server
        pod.name: main
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      containers:
        - name: code-server
          image: linuxserver/code-server:latest
          imagePullPolicy: Always
          ports:
            - name: main
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
          # securityContext:
          #   runAsNonRoot: true
          #   runAsUser: 1000
          #   runAsGroup: 1000
          #   readOnlyRootFilesystem: true
          #   allowPrivilegeEscalation: false
          #   privileged: false
          #   seccompProfile:
          #     type: RuntimeDefault
          #   capabilities:
          #     add: []
          #     drop:
          #       - ALL
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: code-server
        - name: git-private-key
          secret:
            secretName: git-private-key
